# boxy-agent

./: README.md  pyproject.toml
examples/automation/: pyproject.toml
examples/automation/src/automation_agent/: __init__.py  agent.py
examples/data_mining/: pyproject.toml
examples/data_mining/src/data_mining_agent/: __init__.py  agent.py
scripts/: _catalog_generation.py  package_check.py  sync_capability_catalog.py
src/boxy_agent/: __init__.py  _version.py  agent_contract.py  builtin_capability.json  builtin_capability.toml  capabilities.py  capability_catalog.json  capability_catalog.toml  cli.py  compatibility.py  execution_affinity.py  models.py  scaffold.py  types.py
src/boxy_agent/compiler/: __init__.py  compile.py  metadata.py  models.py  package.py
src/boxy_agent/examples/: __init__.py
src/boxy_agent/examples/automation/: pyproject.toml
src/boxy_agent/examples/automation/src/automation_agent/: __init__.py  agent.py
src/boxy_agent/examples/data_mining/: pyproject.toml
src/boxy_agent/examples/data_mining/src/data_mining_agent/: __init__.py  agent.py
src/boxy_agent/examples/main/: pyproject.toml
src/boxy_agent/examples/main/src/main_agent/: __init__.py  agent.py
src/boxy_agent/main_agent/: __init__.py  agent.py  completion_gate.py  config.py  execution.py  helpers.py  orchestration.py  routing.py
src/boxy_agent/private_sdk/: __init__.py  interfaces.py
src/boxy_agent/public_sdk/: __init__.py  decorators.py  interfaces.py
src/boxy_agent/runtime/: __init__.py  discovery.py  errors.py  models.py  runtime.py  wheel_inspection.py
src/boxy_agent/runtime/providers/: __init__.py  builtin_tools.py  clients.py  core.py  protocols.py
src/boxy_agent/sdk/: __init__.py  boxy_tools.py  builtin_tools.py  control.py  data_queries.py  decorators.py  events.py  interfaces.py  llm.py  memory.py  models.py  tracing.py
tests/: __init__.py  support.py  test_compatibility.py  test_packaged_capability_catalog.py  test_smoke.py  test_types.py
tests/cli/: test_cli.py  test_e2e.py
tests/compiler/: test_capability_catalog.py  test_compile.py  test_package.py
tests/examples/: test_canonical_examples.py  test_reference_examples.py
tests/main_agent/: test_config.py  test_handler.py  test_orchestration.py
tests/private_sdk/: test_private_context.py
tests/public_sdk/: test_entrypoint.py  test_event_schema.py  test_interfaces.py  test_public_api.py
tests/runtime/: support.py  test_capability_enforcement.py  test_error_paths.py  test_memory.py  test_memory_and_delegation.py  test_provider_clients.py  test_registry_discovery.py  test_run_loop.py  test_sdk_provider.py
tests/sdk/: test_entrypoint.py  test_interfaces.py  test_public_api.py
tests/test_helpers/: __init__.py  capabilities.py  default_capability_catalog.toml  sdk_provider.py
