[project]
name = "reference-automation-chat-agent"
version = "0.1.0"
description = "Minimal reference Boxy automation chat agent"
requires-python = ">=3.12"
dependencies = ["boxy-agent>=0.2.0a2,<0.3.0"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.boxy_agent.agent]
name = "reference-automation-chat-agent"
description = "Minimal automation chat agent"
version = "0.1.0"
type = "automation"
module = "automation_agent.agent"
expected_event_types = ["chat.reply_request"]

[tool.boxy_agent.capabilities]
data_queries = ["whatsapp.chat_context"]
boxy_tools = ["whatsapp.send_message"]
builtin_tools = []
event_emitters = []
