[project]
name = "reference-data-mining-chat-agent"
version = "0.1.0"
description = "Minimal reference Boxy data-mining chat agent"
requires-python = ">=3.12"
dependencies = ["boxy-agent>=0.2.0a3,<0.3.0"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.boxy_agent.agent]
name = "reference-data-mining-chat-agent"
description = "Minimal data-mining chat agent"
version = "0.1.0"
type = "data_mining"
module = "data_mining_agent.agent"

[tool.boxy_agent.capabilities]
data_queries = ["whatsapp.chat_context"]
boxy_tools = []
builtin_tools = []
event_emitters = ["insight.generated"]
